--- a/src/dynamic.html
+++ b/src/dynamic.html
@@ -22,6 +22,7 @@
          }});
         </script>
     </head>
+    <!-- TODO: Add a full CSS reset here? -->
     <body style="margin: 0px; padding: 0px">
         {body}
     </body>
