Simplify and universalize query parameters
No more guessing based on Accept headers which endpoint to use, it's now
explicit in the query parameters. Boolean query parameters are also simplified
to be simple flags, disallowing the use of things like ?flag=true, which cleans
up logic for parsing considerably.

--- a/src/dynamic.html
+++ b/src/dynamic.html
@@ -19,7 +19,7 @@
          function refresh(event) {{
              location.reload();
          }}
-         let sse = new EventSource("{event_source}");
+         let sse = new EventSource("{event_source}?updates");
          sse.addEventListener("body", setBody);
          sse.addEventListener("clear-body", clearBody);
          sse.addEventListener("title", setTitle);
